Assets/AWSIM/Scripts/AWSIM-Script/Generated-code/AWSIMScriptGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ../grammar/AWSIMScriptGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class AWSIMScriptGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, STRING=30, SIGN=31, 
		NUMBER=32, ID=33, WS=34, LINE_COMMENT=35;
	public const int
		RULE_positionExp = 0, RULE_roadExp = 1, RULE_configExp = 2, RULE_vector2Exp = 3, 
		RULE_egoSettingExp = 4, RULE_simulationSettingExp = 5, RULE_functionExp = 6, 
		RULE_arrayExp = 7, RULE_argumentList = 8, RULE_assignmentStm = 9, RULE_variableExp = 10, 
		RULE_expression = 11, RULE_statement = 12, RULE_scenario = 13, RULE_stringExp = 14, 
		RULE_numberExp = 15, RULE_idExp = 16;
	public static readonly string[] ruleNames = {
		"positionExp", "roadExp", "configExp", "vector2Exp", "egoSettingExp", 
		"simulationSettingExp", "functionExp", "arrayExp", "argumentList", "assignmentStm", 
		"variableExp", "expression", "statement", "scenario", "stringExp", "numberExp", 
		"idExp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'at'", "'back'", "'forward'", "'left'", "'right'", "'max-velocity'", 
		"'('", "')'", "'change-lane'", "'cut-in'", "'cut-out'", "'aggressive-driving'", 
		"'acceleration'", "'deceleration'", "'speed'", "'delay-spawn'", "'delay-move'", 
		"'delay-spawn-until-ego-move'", "'delay-move-until-ego-move'", "'delay-spawn-until-ego-engaged'", 
		"'delay-move-until-ego-engaged'", "'turn-around'", "'#'", "'saving-timeout'", 
		"'['", "']'", "','", "'='", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "STRING", "SIGN", "NUMBER", "ID", 
		"WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AWSIMScriptGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AWSIMScriptGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AWSIMScriptGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AWSIMScriptGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PositionExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringExpContext stringExp() {
			return GetRuleContext<StringExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp() {
			return GetRuleContext<NumberExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext[] variableExp() {
			return GetRuleContexts<VariableExpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext variableExp(int i) {
			return GetRuleContext<VariableExpContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PositionExpContext positionExp() {
			return GetRuleContext<PositionExpContext>(0);
		}
		public PositionExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_positionExp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterPositionExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitPositionExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPositionExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PositionExpContext positionExp() {
		return positionExp(0);
	}

	private PositionExpContext positionExp(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		PositionExpContext _localctx = new PositionExpContext(Context, _parentState);
		PositionExpContext _prevctx = _localctx;
		int _startState = 0;
		EnterRecursionRule(_localctx, 0, RULE_positionExp, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 35;
				stringExp();
				State = 41;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 36;
					Match(T__0);
					State = 39;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case NUMBER:
						{
						State = 37;
						numberExp();
						}
						break;
					case ID:
						{
						State = 38;
						variableExp();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				}
				}
				break;
			case 2:
				{
				State = 43;
				variableExp();
				State = 44;
				Match(T__1);
				State = 47;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 45;
					numberExp();
					}
					break;
				case ID:
					{
					State = 46;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 3:
				{
				State = 49;
				variableExp();
				State = 50;
				Match(T__2);
				State = 53;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 51;
					numberExp();
					}
					break;
				case ID:
					{
					State = 52;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 4:
				{
				State = 55;
				variableExp();
				State = 56;
				Match(T__3);
				State = 59;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 57;
					numberExp();
					}
					break;
				case ID:
					{
					State = 58;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 5:
				{
				State = 61;
				variableExp();
				State = 62;
				Match(T__4);
				State = 65;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 63;
					numberExp();
					}
					break;
				case ID:
					{
					State = 64;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 95;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 93;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
					case 1:
						{
						_localctx = new PositionExpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_positionExp);
						State = 69;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 70;
						Match(T__1);
						State = 73;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case NUMBER:
							{
							State = 71;
							numberExp();
							}
							break;
						case ID:
							{
							State = 72;
							variableExp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					case 2:
						{
						_localctx = new PositionExpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_positionExp);
						State = 75;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 76;
						Match(T__2);
						State = 79;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case NUMBER:
							{
							State = 77;
							numberExp();
							}
							break;
						case ID:
							{
							State = 78;
							variableExp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					case 3:
						{
						_localctx = new PositionExpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_positionExp);
						State = 81;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 82;
						Match(T__3);
						State = 85;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case NUMBER:
							{
							State = 83;
							numberExp();
							}
							break;
						case ID:
							{
							State = 84;
							variableExp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					case 4:
						{
						_localctx = new PositionExpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_positionExp);
						State = 87;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 88;
						Match(T__4);
						State = 91;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case NUMBER:
							{
							State = 89;
							numberExp();
							}
							break;
						case ID:
							{
							State = 90;
							variableExp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					}
					} 
				}
				State = 97;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class RoadExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringExpContext stringExp() {
			return GetRuleContext<StringExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp() {
			return GetRuleContext<NumberExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext variableExp() {
			return GetRuleContext<VariableExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentListContext argumentList() {
			return GetRuleContext<ArgumentListContext>(0);
		}
		public RoadExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_roadExp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterRoadExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitRoadExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoadExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RoadExpContext roadExp() {
		RoadExpContext _localctx = new RoadExpContext(Context, State);
		EnterRule(_localctx, 2, RULE_roadExp);
		int _la;
		try {
			State = 127;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 98;
				stringExp();
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__5) {
					{
					State = 99;
					Match(T__5);
					State = 100;
					Match(T__6);
					State = 103;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case NUMBER:
						{
						State = 101;
						numberExp();
						}
						break;
					case ID:
						{
						State = 102;
						variableExp();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 105;
					Match(T__7);
					}
				}

				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109;
				Match(T__8);
				State = 110;
				Match(T__6);
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14017363520L) != 0)) {
					{
					State = 111;
					argumentList();
					}
				}

				State = 114;
				Match(T__7);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 115;
				Match(T__9);
				State = 116;
				Match(T__6);
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14017363520L) != 0)) {
					{
					State = 117;
					argumentList();
					}
				}

				State = 120;
				Match(T__7);
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 4);
				{
				State = 121;
				Match(T__10);
				State = 122;
				Match(T__6);
				State = 124;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14017363520L) != 0)) {
					{
					State = 123;
					argumentList();
					}
				}

				State = 126;
				Match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConfigExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp() {
			return GetRuleContext<NumberExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext variableExp() {
			return GetRuleContext<VariableExpContext>(0);
		}
		public ConfigExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configExp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterConfigExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitConfigExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfigExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigExpContext configExp() {
		ConfigExpContext _localctx = new ConfigExpContext(Context, State);
		EnterRule(_localctx, 4, RULE_configExp);
		try {
			State = 203;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__11:
				EnterOuterAlt(_localctx, 1);
				{
				State = 129;
				Match(T__11);
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 2);
				{
				State = 130;
				Match(T__12);
				State = 131;
				Match(T__6);
				State = 134;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 132;
					numberExp();
					}
					break;
				case ID:
					{
					State = 133;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 136;
				Match(T__7);
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 3);
				{
				State = 138;
				Match(T__13);
				State = 139;
				Match(T__6);
				State = 142;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 140;
					numberExp();
					}
					break;
				case ID:
					{
					State = 141;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 144;
				Match(T__7);
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 4);
				{
				State = 146;
				Match(T__14);
				State = 147;
				Match(T__6);
				State = 150;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 148;
					numberExp();
					}
					break;
				case ID:
					{
					State = 149;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 152;
				Match(T__7);
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 5);
				{
				State = 154;
				Match(T__15);
				State = 155;
				Match(T__6);
				State = 158;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 156;
					numberExp();
					}
					break;
				case ID:
					{
					State = 157;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 160;
				Match(T__7);
				}
				break;
			case T__16:
				EnterOuterAlt(_localctx, 6);
				{
				State = 162;
				Match(T__16);
				State = 163;
				Match(T__6);
				State = 166;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 164;
					numberExp();
					}
					break;
				case ID:
					{
					State = 165;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 168;
				Match(T__7);
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 7);
				{
				State = 170;
				Match(T__17);
				State = 171;
				Match(T__6);
				State = 174;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 172;
					numberExp();
					}
					break;
				case ID:
					{
					State = 173;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 176;
				Match(T__7);
				}
				break;
			case T__18:
				EnterOuterAlt(_localctx, 8);
				{
				State = 178;
				Match(T__18);
				State = 179;
				Match(T__6);
				State = 182;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 180;
					numberExp();
					}
					break;
				case ID:
					{
					State = 181;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 184;
				Match(T__7);
				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 9);
				{
				State = 186;
				Match(T__19);
				State = 187;
				Match(T__6);
				State = 190;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 188;
					numberExp();
					}
					break;
				case ID:
					{
					State = 189;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 192;
				Match(T__7);
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 10);
				{
				State = 194;
				Match(T__20);
				State = 195;
				Match(T__6);
				State = 198;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
					{
					State = 196;
					numberExp();
					}
					break;
				case ID:
					{
					State = 197;
					variableExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 200;
				Match(T__7);
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 11);
				{
				State = 202;
				Match(T__21);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Vector2ExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext[] numberExp() {
			return GetRuleContexts<NumberExpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp(int i) {
			return GetRuleContext<NumberExpContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext[] variableExp() {
			return GetRuleContexts<VariableExpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext variableExp(int i) {
			return GetRuleContext<VariableExpContext>(i);
		}
		public Vector2ExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vector2Exp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterVector2Exp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitVector2Exp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVector2Exp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Vector2ExpContext vector2Exp() {
		Vector2ExpContext _localctx = new Vector2ExpContext(Context, State);
		EnterRule(_localctx, 6, RULE_vector2Exp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 207;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				{
				State = 205;
				numberExp();
				}
				break;
			case ID:
				{
				State = 206;
				variableExp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 209;
			Match(T__22);
			State = 212;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				{
				State = 210;
				numberExp();
				}
				break;
			case ID:
				{
				State = 211;
				variableExp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EgoSettingExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp() {
			return GetRuleContext<NumberExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableExpContext variableExp() {
			return GetRuleContext<VariableExpContext>(0);
		}
		public EgoSettingExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_egoSettingExp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterEgoSettingExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitEgoSettingExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEgoSettingExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EgoSettingExpContext egoSettingExp() {
		EgoSettingExpContext _localctx = new EgoSettingExpContext(Context, State);
		EnterRule(_localctx, 8, RULE_egoSettingExp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 214;
			Match(T__5);
			State = 215;
			Match(T__6);
			State = 218;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				{
				State = 216;
				numberExp();
				}
				break;
			case ID:
				{
				State = 217;
				variableExp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 220;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimulationSettingExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpContext numberExp() {
			return GetRuleContext<NumberExpContext>(0);
		}
		public SimulationSettingExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simulationSettingExp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.EnterSimulationSettingExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAWSIMScriptGrammarListener typedListener = listener as IAWSIMScriptGrammarListener;
			if (typedListener != null) typedListener.ExitSimulationSettingExp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAWSIMScriptGrammarVisitor<TResult> typedVisitor = visitor as IAWSIMScriptGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimulationSettingExp(this);
			else return visitor.VisitChildren(this);
		}
	}
